--- a/assets/plugins/parallax-slider/css/parallax-slider.css
+++ b/assets/plugins/parallax-slider/css/parallax-slider.css
@@ -17,9 +17,9 @@
 	width: 100%;
 	height: 100%;
 	top: 0px;
-	left: 6px;
+	left: 51px;
 	font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
-	text-align: left;
+	text-align: center;
 }
 .da-slide-current{
 	z-index: 10;
@@ -62,14 +62,15 @@
 	top: 100px;
 	z-index: 10;
 	padding:0;
-	margin-left:-2%;
+	margin-left: -5%;
 }
 .da-slide h2 i {
-	font-size: 36px;
+	font-style: c;
+	font-style: c;
+	/* background:url("../img/bg-heading.png") repeat; */
 	font-style:normal;
-	background:url("../img/bg-heading.png") repeat;
-	padding:0 5px;
-	text-transform:uppercase;
+	/* background:url("../img/bg-heading.png") repeat; */
+	opacity: .85;
 }
 .da-slide p {
 	font-family: 'Open Sans', sans-serif;
@@ -80,7 +81,7 @@
 	top: 300px;
 	color: #fff;
 	overflow: hidden;
-	margin-left:-2%;
+	margin-left: -47%;
 }
 .da-slide p i {
 	background:url("../img/bg-text.png") repeat;
@@ -104,7 +105,7 @@
 
 	left: 84%;
 
-	left: 60%;
+	left: 63%;
 
 	opacity: 1;
 }
@@ -201,7 +202,7 @@
 .da-slide-current h2,
 .da-slide-current p,
 .da-slide-current .da-link{
-	left: 10%;
+	left: 15%;
 	opacity: 1;
 }
 
@@ -710,7 +711,7 @@
 @media (min-width: 1440px) {
 	.da-slide h2,
 	.da-slide p {
-		margin-left: 5%;
+		left: 15%;
 	}
 	.da-slide .da-img{
 		margin-left: -17%;
